Change template with my info

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <div class="resume">
         <div class="container">
           <div class="resume__block">
-            <h1 class="contact-info__header">Bulka</h1>
-            <h3 class="contact-info__sub-header">Senior Hooman Manager</h3>
+            <h1 class="contact-info__header">Oscar Velez</h1>
+            <h3 class="contact-info__sub-header">Developer</h3>
 
             <div class="contact_info_container fh">
               <div class="contact-info__block">
@@ -30,21 +30,21 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>Lviv, Ukraine</span>
+                  <span>Cali, Colombia</span>
                 </a>
               </div>
 
               <div class="contact-info__block contact-info__block--center">
                 <img
                   class="contact-info__avatar"
-                  src="assets/avatar.jpg"
+                  src="assets/avatar2.jpg"
                   alt="Avatar"
                 />
               </div>
 
               <div class="contact-info__block">
                 <a
-                  href="https://ua.linkedin.com/company/binary-studio_241166"
+                  href="https://www.linkedin.com/in/oscar-santiago-velez-mu%C3%B1oz-875894115/"
                   rel="author"
                   class="contact-info__item"
                 >
@@ -59,7 +59,7 @@
                       ></path>
                     </svg>
                   </div>
-                  <span>binary-studio</span>
+                  <span>linkedin</span>
                 </a>
               </div>
             </div>
@@ -81,9 +81,9 @@
                 </svg>
               </div>
               <p class="intro_text">
-                Meow. I am a Binary Studio cat. Still got 7 lives. Work in IT,
-                Full Stack Evil, all I do is sleep and try to help out hoomans
-                with their projects whenever they need me.
+                I’m OSCAR VELEZ, a political scientist, a social sciences graduate and a philosophy student.
+                I learned data analysis at university, my first programming language was R, then Python, but I fell in love with JS.
+                I have been working for almost two years in a technology startup connecting REST APIs.
               </p>
             </div>
           </div>
@@ -93,7 +93,8 @@
             <div class="skills">
               <h3 class="skills__header">Skills</h3>
               <p class="skills__text">
-                Sleep, eat, more sleep, meow, mrrr, purr.
+                Web development: proficient in HTML, CSS and JavaScript, familiar with frameworks like Next.js and tools like Postman and Insomnia.
+Data analysis: experienced in using R and Python for data manipulation, visualization and modeling, familiar with libraries like pandas, numpy, matplotlib and scikit-learn.
               </p>
             </div>
           </div>
@@ -109,18 +110,18 @@
                 <h3 class="experiences__header">Experience</h3>
                 <div class="experiences__company">
                   <div class="experiences__company-header">
-                    <span class="experiences__company-header-durability">For whole my life</span>
-                    <h3 class="experiences__company-header-name">BinaryStudio</h3>
+                    <span class="experiences__company-header-durability">More that 2 years</span>
+                    <h3 class="experiences__company-header-name">PoluxApps</h3>
                   </div>
               
                   <div class="experiences__company-project">
-                    <span class="experiences__company-project-role">Binary Studio Cat</span>
-                    <h3 class="experiences__company-project-name">Hooman project</h3>
+                    <span class="experiences__company-project-role">Junior</span>
+                    <h3 class="experiences__company-project-name">REST suporter</h3>
                     <ul class="experiences__company-project-responsibilities">
-                      <li>Supported hoomans</li>
-                      <li>Slept all the time</li>
-                      <li>Lied on the keyboard</li>
-                      <li>Watched my hoomans working</li>
+                      <li>Backend operations with NODE</li>
+                      <li>Api REST with NextJS</li>
+                      <li>Sharing data with stakeholders</li>
+                      <li>Build simple and minimalist frontend with JS</li>
                     </ul>
                   </div>
                 </div>    
@@ -132,22 +133,28 @@
                   <h3 class="additional-info__education-header">Education</h3>
                   <div class="additional-info__education-university">
                     <span class="additional-info__education-university-durability">2021</span>
-                    <h3 class="additional-info__education-university-speciality">Cat track</h3>
-                    <p class="additional-info__education-university-name">Binary Studio Academy</p>
+                    <h3 class="additional-info__education-university-speciality">Data scientist</h3>
+                    <p class="additional-info__education-university-name">Universidad Icesi / Universidad del Valle</p>
                   </div>
 
                   <div class="additional-info__languages">
                     <h3 class="additional-info__languages-header">Languages</h3>
                     <p class="additional-info__languages-item">
-                      Meow dialect
+                      Spanish (native)
                     </p>
                     <p class="additional-info__languages-item">
-                      Ukrainian (understand)
+                      English (proficient)
                     </p>
                     <p class="additional-info__languages-item">
-                      English (don't understand)
+                      Portuguese (proficient)
+                    </p>
+                    <p class="additional-info__languages-item">
+                      French (basic)
                     </p>
                   </div>
+                  <p class="additional-info__languages-item">
+                    TypeScript (passionate)
+                  </p>
 
 
               </div>
