Fixing Html and CSS issues

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ Data analysis: experienced in using R and Python for data manipulation, visualiz
           <div class="resume__block">
             <div class="main-info fh">
         
-              <di class="experiences">
+              <div class="experiences">
 
 
                 <h3 class="experiences__header">Experience</h3>
